Add User Retrieval Endpoint
