# e7gzly-api/urls.py
@@ -21,6 +21,7 @@ urlpatterns = [
     path('account/registration/', RegistrationView.as_view(), name='registration'),
     path('account/authorization/', AuthorizationView.as_view(), name='authorization'),
     path('users/', UserView.as_view(), name='users'),
+    path('user/', UserDetailsView.as_view(), name='user details'),
     path('matches/', MatchView.as_view(), name='matches'),
     path('match/', MatchDetailsView.as_view(), name='match details'),
     path('stadiums/', StadiumView.as_view(), name='stadiums'),
